--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_buttons.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_buttons.scss
@@ -47,6 +47,10 @@ $btn-size-sm:           $input-height-sm;*/
     }   
 }
 
+.btn-link {
+    text-decoration: none !important;
+}
+
 
 // btn-grey
 // --------------------------------------------------
