--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
@@ -1,8 +1,21 @@
-﻿$mm-navlink-font-size:                  $font-size-base;
+﻿/// <reference path="bs4/scss/bootstrap.scss" />
+
+$mm-navlink-font-size:                  1rem;
+$mm-bg:                                 $gray-lightest;
+$mm-light-color:                        $body-color;
+$mm-light-hover-color:                  scale-color($mm-bg, $lightness: -5%); //darken($mm-bg, 7%); // rgba(0, 0, 0, 0.06)
+$mm-dark-color:                         #fff;
+$mm-dark-hover-color:                   scale-color($mm-bg, $lightness: 15%); //lighten($mm-bg, 7%); // rgba(255,255,255, 0.1)
+
+.megamenu-section .navbar {
+    background: $mm-bg;
+    padding: 0; 
+}
 
 .megamenu-container {
     position: relative;
 }
+
 .megamenu {
     overflow: hidden;
     position: relative;
@@ -13,8 +26,24 @@
     font-size: $mm-navlink-font-size;
 }
 
-.navbar-light .megamenu .navbar-nav .nav-link {
-    color: $body-color;
+.navbar-light .megamenu .nav-item {
+    .nav-link { color: $mm-light-color; }
+
+     &.active .nav-link, 
+     .nav-link:focus, 
+     .nav-link:hover { 
+         background: $mm-light-hover-color;
+     }
+}
+
+.navbar-dark .megamenu .nav-item {
+    .nav-link { color: $mm-dark-color; }
+
+     &.active .nav-link, 
+     .nav-link:focus, 
+     .nav-link:hover { 
+         background: $mm-dark-hover-color; 
+     }
 }
 
 .megamenu-nav i {
@@ -153,18 +182,11 @@
 .megamenu-dropdown-container .megamenu-html-text {
     overflow: hidden;
 }
-.megamenu-section .navbar {
-    padding: 0;
-}
 .megamenu .navbar-nav .nav-item + .nav-item {
     margin-left: 0;
 }
 .megamenu-container .nav-link {
-    padding: 1rem .5rem;
-}
-.megamenu-container .nav-link:hover,
-.megamenu-container .nav-item.active .nav-link {
-    background-color: rgba(0,0,0, 0.07);
+    padding: 1em .6em;
 }
 
 .megamenu ul.nav .nav-item {
@@ -198,10 +220,10 @@
     transition: width .01s ease-in-out 1.5s;
 }
 .megamenu .megamenu-nav--prev .megamenu-nav-btn {
-    background-image: linear-gradient(to left, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
+    background-image: linear-gradient(to left, rgba($mm-bg, 0), $mm-bg 40%, $mm-bg 100%);
 }
 .megamenu .megamenu-nav--next .megamenu-nav-btn {
-    background-image: linear-gradient(to right, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
+    background-image: linear-gradient(to right, rgba($mm-bg, 0), $mm-bg 40%, $mm-bg 100%);
 }
 .megamenu.megamenu-blend--next .megamenu-nav--next .megamenu-nav-btn,
 .megamenu.megamenu-blend--prev .megamenu-nav--prev .megamenu-nav-btn {
@@ -213,6 +235,7 @@
 .touch .megamenu-section .navbar:hover .megamenu-nav--prev i,
 .touch .megamenu-section .navbar:hover .megamenu-nav--next i,
 .megamenu .megamenu-nav i {
+    // TODO: (mh) adapt $mm-(light|dark)-color
     color: #000;
     display: none;
 }
