--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Drop.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Drop.cshtml
@@ -23,7 +23,7 @@
 <div class="art-drop">
 	@if (Model.ColorAttribute != null || Model.Attributes.Any())
 	{
-		<div class="art-drop-info">
+		<div class="art-variant-info">
 			@if (Model.ColorAttribute != null)
 			{
 				<div class="art-color-opts">
@@ -53,7 +53,7 @@
 		</div>
 	}
 
-	<div class="row art-drop-btn-group">
+	<div class="row art-btn-group">
 		@if (!price.DisableBuyButton && list.BuyEnabled)
 		{
 			if (!price.CallForPrice)
@@ -62,7 +62,7 @@
 
 				<a data-href='@addToCartUrl'
 				   href="#"
-				   class="btn btn-primary btn-icon btn-lg art-drop-btn col-xs ajax-cart-link"
+				   class="btn btn-primary btn-icon btn-lg art-btn col-xs ajax-cart-link"
 				   title="@title"
 				   data-toggle="tooltip"
 				   rel="nofollow"
@@ -88,7 +88,7 @@
 			@* TODO: (mc) refactor data-form-selector="#product-details-form"  *@
 			<a data-href='@Url.Action("AddProduct", "ShoppingCart", new RouteValueDictionary { { "productId", Model.Id }, { "shoppingCartTypeId", (int)ShoppingCartType.Wishlist } })'
 			   href="#"
-			   class="btn btn-secondary btn-icon btn-lg art-drop-btn col-xs ajax-cart-link" 
+			   class="btn btn-secondary btn-icon btn-lg art-btn col-xs ajax-cart-link" 
 			   title="@T("Categories.Wishlist")"
 			   data-toggle="tooltip" 
 			   rel="nofollow"
@@ -103,7 +103,7 @@
 		{
 			<a data-href="@Url.Action("AddProductToCompare", "Catalog", new RouteValueDictionary { { "id", Model.Id } })" 
 			   href="#"
-			   class="btn btn-secondary btn-icon btn-lg art-drop-btn col-xs ajax-cart-link" 
+			   class="btn btn-secondary btn-icon btn-lg art-btn col-xs ajax-cart-link" 
 			   title="@T("Categories.Compare")"  
 			   data-toggle="tooltip" 
 			   rel="nofollow"
@@ -114,7 +114,7 @@
 		}
 
 		<a href='@Url.RouteUrl("Product", new RouteValueDictionary { { "SeName", Model.SeName } })' 
-		   class="btn btn-secondary btn-icon btn-lg art-drop-btn col-xs" 
+		   class="btn btn-secondary btn-icon btn-lg art-btn col-xs" 
 		   title="@T("Products.Details")">
 			<i class="fa fa-info"></i>
 		</a>
