--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -138,7 +138,9 @@ body {
     background: $body-bg;
 }
 
-// Move all later
+//
+// TODO: (mc) Move all later (!)
+// ------------------------------------------------------
 
 #page {
     background: $body-bg;
@@ -154,6 +156,30 @@ body {
 .page-title {
     margin-bottom: 1.5rem;
 }
+
+
+.block {
+    margin-bottom: 1.8rem;
+
+    .block-title {
+        font-size: $font-size-h3;
+        line-height: 1.3;
+        padding: 0.5rem 0;
+        border-bottom: 1px dotted rgba(0,0,0, 0.2);
+    }
+
+    &.block-boxed {
+        border: 1px dotted rgba(0,0,0, 0.2);
+    }
+
+    &.block-boxed .block-title {
+        color: $gray-light;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+    }
+}
+
+
 
 
 .pagination {
