--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -8,9 +8,10 @@
 	var list = Model.Parent;
 	var picture = Model.Picture;
 
-	var showButtons = !Model.Price.DisableWishlistButton || list.CompareEnabled || (!Model.Price.DisableBuyButton && list.BuyEnabled);
+	var showButtons = list.ShowButtons && (!Model.Price.DisableWishlistButton || list.CompareEnabled || (!Model.Price.DisableBuyButton && list.BuyEnabled));
 	var showVariants = Model.ColorAttribute != null || (Model.Attributes != null && Model.Attributes.Any());
 	var showDrop = showButtons || showVariants;
+	var showAttrs = list.ViewMode == ProductSummaryViewMode.List && (list.ShowSku || list.ShowWeight || list.ShowDimensions);
 }
 
 <article class="art" data-id="@Model.Id">
@@ -54,11 +55,11 @@
 				}
 			}
 
-			<h4 class="art-name">
+			<h3 class="art-name">
 				<a href="@artDetailUrl" title="@Model.Name">
 					<span>@Model.Name</span>
 				</a>
-			</h4>
+			</h3>
 
 			@if (list.ShowDescription)
 			{
@@ -66,6 +67,33 @@
 					@* TODO: (mc) Only render description block when merchant wishes so and only when at least one description is specified *@
 					@Html.Raw(Model.ShortDescription.Truncate(160, "..."))
 				</div>
+			}
+
+			@if (showAttrs)
+			{
+				<table class="art-attrs">
+					@if (list.ShowSku && Model.Sku.HasValue())
+					{
+						<tr>
+							<td>@T("Products.Sku"):</td>
+							<td>@Model.Sku</td>
+						</tr>
+					}
+					@if (list.ShowWeight && Model.Weight.HasValue())
+					{
+						<tr>
+							<td>@T("Products.Weight"):</td>
+							<td>@Model.Weight</td>
+						</tr>
+					}
+					@if (list.ShowDimensions && Model.Dimensions.HasValue())
+					{
+						<tr>
+							<td>@T("Products.Dimensions") (@Model.DimensionMeasureUnit):</td>
+							<td>@Model.Dimensions</td>
+						</tr>
+					}
+				</table>
 			}
 
 			@if (list.ViewMode != ProductSummaryViewMode.List)
@@ -81,7 +109,7 @@
 			@if (list.ShowLegalInfo)
 			{
 				<div class="art-legalinfo">
-					@Html.Raw(Model.LegalInfo)
+					* @Html.Raw(Model.LegalInfo)
 				</div>
 			}
 		</div>
