--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_artlist.scss
@@ -10,9 +10,24 @@ $art-font-size-xs:              $font-size-xs;
 $art-line-height:               1.3;
 $art-price-color:               $body-color;
 $art-price-offer-color:         $brand-danger;
-$art-border-color:              rgba(0,0,0, 0.12);
+$art-border-color:              #ddd;
 $art-active-bg-color:           #fff;
+$art-active-border-color:       rgba(0,0,0, 0.2);
 
+@mixin make-art-col($cols) {
+    $w: percentage(1 / $cols);
+
+    .art {
+        flex: 0 0 $w;
+        max-width: $w;
+        color: yellow;
+    }
+
+    &.artlist-boxed .art {
+        flex-basis: calc(#{$w} - 1rem);
+        max-width: calc(#{$w} - 1rem);
+    }
+}
 
 // Action Bar
 
@@ -132,7 +147,7 @@ $art-active-bg-color:           #fff;
 
     &.active {
         background: $art-active-bg-color;
-        border-color: rgba(0,0,0, 0.2);
+        border-color: $art-active-border-color !important;
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     }
 }
@@ -203,10 +218,14 @@ $art-active-bg-color:           #fff;
     font-size: $art-font-size;
     font-weight: 600;
     margin-bottom: 0.25rem;
+    > a { color: $body-color; }
+}
 
-    > a {
-        color: $body-color;
-    }
+.art-genericname {
+    font-size: $art-font-size;
+    font-weight: 600;
+    text-align: center;
+    > a { color: $body-color; }
 }
 
 .art-description {
@@ -256,7 +275,7 @@ $art-active-bg-color:           #fff;
 }
 
 .art-info-group {
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.5rem;
 }
 
 .art-drop {
@@ -265,7 +284,7 @@ $art-active-bg-color:           #fff;
     right: -1px;
     bottom: 0;
     background: $art-active-bg-color;
-    border: 1px solid rgba(0,0,0, 0.2);
+    border: 1px solid $art-active-border-color;
     border-top-color: #fff;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
     opacity: 0;
@@ -396,17 +415,30 @@ $art-active-bg-color:           #fff;
 
     .art-brand,
     .art-rating {
-        float: left;
+        position: relative;
         margin-bottom: 0;
+    }
+
+    .art-brand-picture {
+        display: inline-block;
+        max-width: 100%;
+        height: auto;
+        max-height: 24px;
+    }
+
+    .floating > .art-brand {
+        padding-right: 90px; // ratings width + 10px
+    }
+
+    .floating > .art-rating {
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 
     .art-name {
         font-size: 1rem;
         margin-bottom: 0.5em;
-    }
-
-    .art-brand + .art-rating {
-        float: right !important;
     }
 
     .art-price {
@@ -459,7 +491,7 @@ $art-active-bg-color:           #fff;
     margin-left: 0;
     margin-right: 0;
 
-    &.artlist::after {
+    &:not(.artlist-boxed).artlist::after {
         // Make continous line after last row
         position: relative;
         content: '';
@@ -470,10 +502,11 @@ $art-active-bg-color:           #fff;
     }
     
     .art {
-        // Grid has always 2 cols per row at least, even on xs
-        @include make-col-span(6, $grid-columns);
         border-bottom-color: $art-border-color;
     }
+
+    // Grid has always 2 cols per row at least, even on xs
+    @include make-art-col(2);
 
     // Ensure equal height for some elements in grid style lists
     .art-name,
@@ -525,42 +558,54 @@ $art-active-bg-color:           #fff;
     }
 
     @include media-breakpoint-up(sm) {
-        &.artlist-4-cols .art,
-        &.artlist-5-cols .art,
-        &.artlist-6-cols .art {
-            @include make-col-span(4, $grid-columns);
+        &.artlist-4-cols,
+        &.artlist-5-cols,
+        &.artlist-6-cols {
+            @include make-art-col(3);
         }
     }
 
     @include media-breakpoint-up(md) {
-        &.artlist-5-cols .art {
-            @include make-col-span(4, $grid-columns);
+        &.artlist-5-cols {
+            @include make-art-col(3);
         }
-        &.artlist-6-cols .art {
-            @include make-col-span(3, $grid-columns);
+        &.artlist-6-cols {
+            @include make-art-col(4);
         }
     }
 
     @include media-breakpoint-up(lg) {
-        &.artlist-3-cols .art,
-        &.artlist-4-cols .art {
-            @include make-col-span(4, $grid-columns);
+        &.artlist-3-cols,
+        &.artlist-4-cols {
+            @include make-art-col(3);
         }
-        &.artlist-5-cols .art,
-        &.artlist-6-cols .art {
-            @include make-col-span(3, $grid-columns);
+        &.artlist-5-cols,
+        &.artlist-6-cols {
+            @include make-art-col(4);
         }
     }
 
     @include media-breakpoint-up(xl) {
-        &.artlist-4-cols .art {
-            @include make-col-span(3, $grid-columns);
+        &.artlist-4-cols {
+            @include make-art-col(4);
         }
-        &.artlist-5-cols .art {
-            @include make-col-span(2, 10);
+        &.artlist-5-cols {
+            @include make-art-col(5);
         }
-        &.artlist-6-cols .art {
-            @include make-col-span(2, $grid-columns);
+        &.artlist-6-cols {
+            @include make-art-col(6);
+        }
+    }
+
+    &.artlist-boxed {
+        margin-left: -0.5rem;
+        margin-right: -0.5rem;
+
+        .art {
+            background: $art-active-bg-color;
+            border-color: $art-border-color;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+            margin: 0 0.5rem 1rem 0.5rem;
         }
     }
 }
