--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -21,24 +21,28 @@
 
 @helper SubCategoryList()
 {
-    <div class="card-deck card-cols-sm-1 card-cols-md-2 card-cols-lg-3 card-cols-xl-4 category-grid sub-category-grid">
-        @foreach (var item in Model.SubCategories)
-        {
-            <article class="card card-block card-shadow category-item sub-category-item">
-                <h2 class="category-title card-title h6">
-                    <a href="@Url.RouteUrl("Category", new { SeName = item.SeName })" title="@item.PictureModel.Title">@item.Name</a>
-                </h2>
-                <div class="picture">
-                    @if (item.PictureModel.ImageUrl.HasValue())
-                    {
-                        <a href="@Url.RouteUrl("Category", new { SeName = item.SeName })" title="@item.PictureModel.Title">
-                            <img alt="@item.PictureModel.AlternateText" src="@item.PictureModel.ImageUrl" title="@item.PictureModel.Title" />
-                        </a>
-                    }
-                </div>
-            </article>
-        }
-    </div>
+	<div class="artlist artlist-grid artlist-4-cols artlist-boxed artlist-sub-categories">
+		@foreach (var item in Model.SubCategories)
+		{
+			var picture = item.PictureModel;
+			var url = Url.RouteUrl("Category", new { SeName = item.SeName });
+			<article class="art" data-id="@item.Id">
+				<div class="art-picture-block">
+					@if (picture != null && picture.ImageUrl.HasValue())
+					{
+						<a class="art-picture" href="@url" title="@picture.Title">
+							<img src="@picture.ImageUrl" alt="@picture.AlternateText" />
+						</a>
+					}
+				</div>
+				<div class="art-genericname">
+					<a href="@url" title="@item.Name">
+						<span>@item.Name</span>
+					</a>
+				</div>
+			</article>
+		}
+	</div>
 }
 
 @section teaser {
