--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Grouped.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Grouped.cshtml
@@ -75,15 +75,15 @@
 
                             @{ Html.RenderAction("ReviewOverview", new { id = Model.Id }); }
 
-						    @if (Model.Manufacturers != null && Model.Manufacturers.Any(x => x.PictureModel != null && x.PictureModel.ImageUrl.HasValue()))
+						    @if (Model.Manufacturers != null && Model.Manufacturers.Any(x => x.Picture != null && x.Picture.ImageUrl.HasValue()))
 							{
 							    <div class="manufacturer-pics">
-								    @foreach (var manufacturer in Model.Manufacturers.Where(x => x.PictureModel != null && x.PictureModel.ImageUrl.HasValue()))
+								    @foreach (var manufacturer in Model.Manufacturers.Where(x => x.Picture != null && x.Picture.ImageUrl.HasValue()))
 									{
 									    <div class="manufacturer-item">
 										    <div class="picture">
-											    <a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" title="@manufacturer.PictureModel.Title">
-												    <img alt="@manufacturer.PictureModel.AlternateText" src="@manufacturer.PictureModel.ImageUrl" title="@manufacturer.PictureModel.Title" />
+											    <a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" title="@manufacturer.Picture.Title">
+												    <img alt="@manufacturer.Picture.AlternateText" src="@manufacturer.Picture.ImageUrl" title="@manufacturer.Picture.Title" />
 											    </a>
 										    </div>
 									    </div>
