--- a/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -69,12 +69,12 @@
                         @Html.Widget("productdetails_after_pictures")
 
                         <div class="manufacturer-pics manufacturer-pics-container">
-							@foreach (var manufacturer in Model.Manufacturers.Where(x => x.PictureModel != null && x.PictureModel.ImageUrl.HasValue()))
+							@foreach (var manufacturer in Model.Manufacturers.Where(x => x.Picture != null && x.Picture.ImageUrl.HasValue()))
 							{
 								<div class="manufacturer-item">
 									<div class="picture">
-										<a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" title="@manufacturer.PictureModel.Title">
-											<img alt="@manufacturer.PictureModel.AlternateText" src="@manufacturer.PictureModel.ImageUrl" title="@manufacturer.PictureModel.Title" /></a>
+										<a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" title="@manufacturer.Picture.Title">
+											<img alt="@manufacturer.Picture.AlternateText" src="@manufacturer.Picture.ImageUrl" title="@manufacturer.Picture.Title" /></a>
 									</div>
 								</div>
 							}
