Theming: mnor change

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -15,6 +15,7 @@ $enable-hover-media-query:      false;
 $enable-grid-classes:           true;
 
 $body-color:                    #333;
+$link-color:                    #08c;
 
 $headings-line-height:          1.3;
 
