--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -158,6 +158,12 @@ body {
     margin-bottom: 1.5rem;
 }
 
+.text-body {
+    // TODO: (mc) Make variable for this
+    // TODO: (mc) > (mh) Apply to all elems with long text/description (news, blogs, forum etc.)
+    font-size: 1rem;
+}
+
 
 .block {
     margin-bottom: 1.8rem;
