--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -77,6 +77,7 @@
             dataType: 'json',
             //acceptFileTypes: /^image\/(gif|jpeg|jpg|png)$/,
             acceptFileTypes: /(\.|\/)(gif|jpe?g|png)$/i,
+        	pasteZone: null,
 
             done: function (e, data) {
                 var result = data.result;
